--- a/icons.html
+++ b/icons.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Rubik&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style-icons.css">
-  <title>Document</title>
+  <title>Icon Selector</title>
 </head>
 <body>
   <div class="container">
