--- a/icons.html
+++ b/icons.html
@@ -19,12 +19,12 @@
     <div class="header">
       <div class="logo">FontIcons</div>
     </div>
-    <!-- <div class="search">
+    <div class="search">
       <label for="type">Filtra per tipo</label>
       <select name="type" id="type">
         <option value="">All</option>
       </select>
-    </div> -->
+    </div>
     <div class="icons">
       <!--
       example
